added new pages

--- a/cmp-2.html
+++ b/cmp-2.html
@@ -37,8 +37,16 @@
                             <li class="header__list-item">
                                 <a href="#!" class="header__list-link">О компании</a>
                             </li>
-                            <li class="header__list-item">
+                            <li class="header__list-item" data-sublist="true">
                                 <a href="#!" class="header__list-link">СМР</a>
+                                <ul class="header__list-sublist">
+                                    <li class="header__list-subitem">
+                                        <a href="#!" class="header__list-link">СМР</a>
+                                    </li>
+                                    <li class="header__list-subitem">
+                                        <a href="#!" class="header__list-link">Ремонт, гидроизоляция и др.</a>
+                                    </li> 
+                                </ul>
                             </li>
                             <li class="header__list-item">
                                 <a href="#!" class="header__list-link">Материалы</a>
