Связал все страницы

--- a/clients.html
+++ b/clients.html
@@ -33,38 +33,38 @@
                         <img src="./img/close-ico.svg" alt="" class="header__close">
                         <ul class="header__list">
                             <li class="header__list-item">
-                                <a href="#!" class="header__list-link">Главная</a>
+                                <a href="./index.html" class="header__list-link">Главная</a>
                             </li>
                             <li class="header__list-item">
-                                <a href="#!" class="header__list-link">О компании</a>
+                                <a href="./about.html" class="header__list-link">О компании</a>
                             </li>
                             <li class="header__list-item" data-sublist="true">
                                 <a href="#!" class="header__list-link">СМР</a>
                                 <ul class="header__list-sublist">
                                     <li class="header__list-subitem">
-                                        <a href="#!" class="header__list-link">СМР</a>
+                                        <a href="./cmp.html" class="header__list-link">СМР</a>
                                     </li>
                                     <li class="header__list-subitem">
-                                        <a href="#!" class="header__list-link">Ремонт, гидроизоляция и др.</a>
+                                        <a href="./cmp-2.html" class="header__list-link">Ремонт, гидроизоляция и др.</a>
                                     </li> 
                                 </ul>
                             </li>
                             <li class="header__list-item">
-                                <a href="#!" class="header__list-link">Материалы</a>
+                                <a href="./materials.html" class="header__list-link">Материалы</a>
                             </li>
                             <li class="header__list-item">
-                                <a href="#!" class="header__list-link">Каталог</a>
-                            </li>
-                            <li class="header__list-item">
-                                <a href="#!" class="header__list-link">Устойчивое
+                                <a href="./advantages.html" class="header__list-link">Устойчивое
                                     развитие</a>
                             </li>
                             <li class="header__list-item">
-                                <a href="#!" class="header__list-link">Заказчики и
+                                <a href="./clients.html" class="header__list-link header__link-active">Заказчики и
                                     партнеры</a>
                             </li>
                             <li class="header__list-item">
-                                <a href="#!" class="header__list-link">Пресс-центр</a>
+                                <a href="./center-projects.html" class="header__list-link">Пресс-центр</a>
+                            </li>
+                            <li class="header__list-item">
+                                <a href="./contacts.html" class="header__list-link">Контакты</a>
                             </li>
                         </ul>
                     </nav>
