--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="pictures">
             <div class="pictures__list">
                 <div class="pictures__list-item">
-                    <a href="#!" class="pictures__item item-1">
+                    <a href="./about.html" class="pictures__item item-1">
                         <div class="pictures__card big">
                             <div class="pictures__item-content">
                                 <h2 class="pictures__item-title">О компании</h2>
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="pictures__list-item">
-                    <a href="#!" class="pictures__item item-2">
+                    <a href="./cmp.html" class="pictures__item item-2">
                         <div class="pictures__card">
                             <div class="pictures__item-content">
                                 <h2 class="pictures__item-title">СМР</h2>
@@ -54,7 +54,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#!" class="pictures__item item-3">
+                    <a href="./materials.html" class="pictures__item item-3">
                         <div class="pictures__card">
                             <div class="pictures__item-content">
                                 <h2 class="pictures__item-title">Материалы</h2>
@@ -62,7 +62,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#!" class="pictures__item item-4">
+                    <a href="./advantages.html" class="pictures__item item-4">
                         <div class="pictures__card">
                             <div class="pictures__item-content">
                                 <h2 class="pictures__item-title">Конкурентные
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#!" class="pictures__item item-5">
+                    <a href="./clients.html" class="pictures__item item-5">
                         <div class="pictures__card">
                             <div class="pictures__item-content">
                                 <h2 class="pictures__item-title">Заказчики и 
